# SeminarioIA-LCC-UNISON-2026

./: GEMINI.md  README.md  pyproject.toml
data/: README.md  analisis-recoleccion-datos.typ
data/config/: README_cultivos.md  codificacion.json  cultivos.json  lista_cultivos.txt
data/processed/: SonoraLatLongAlt.csv  cultivos.json  inventory_report.csv
data/processed/nasa_power/: data_Aconchi_2003.csv  data_Aconchi_2005.csv  data_Aconchi_2006.csv  data_Aconchi_2009.csv  data_Aconchi_2012.csv  data_Aconchi_2013.csv  data_Aconchi_2015.csv  data_Aconchi_2016.csv  data_Aconchi_2021.csv  data_Aconchi_2024.csv  data_Agua Prieta_2003.csv  data_Agua Prieta_2004.csv  data_Agua Prieta_2005.csv  data_Agua Prieta_2006.csv  data_Agua Prieta_2007.csv  data_Agua Prieta_2008.csv  data_Agua Prieta_2009.csv  data_Agua Prieta_2010.csv  data_Agua Prieta_2011.csv  data_Agua Prieta_2012.csv  data_Agua Prieta_2013.csv  data_Agua Prieta_2014.csv  data_Alamos_2003.csv  (+1231 more)
data/raw/: AgriculturaEscalaMunicipalSonora.txt  raw.md  reporte-repna-1.csv  reporte-repna-2.csv
data/scripts/: analisis_express_trigo.py  script_limpieza_siap_produccion.py  script_lista_cultivos.py  script_nasa_power_data.py  tests.py
docs/: README.md  cronograma.md  cronograma_visual.typ  get_prod_data.md  getters_codigos.md  glosario.typ  informe-datos.md  marco-analitico-fase2.typ  region_crop_models.md  reporte-calculo-hh.typst  resumen-datasets.typ
docs/resumenes/: analisis-cadena-suministros.typ
notebooks/: README.md  data.py  ejemplo_codigos.py  ejemplo_filtro_cultivos.py  ejemplo_region_crop.py  exploracion-sequias-datos.qgz  exploracion.py  inspect_data_v2.py  notebooks.md  reportes_repna.ipynb  test_indentation.py  test_nasa_power.py
notebooks/scripts/: extract_data.py  extract_siacon_data.py  inspect_columns.py  inspect_metadata.py  metadata_audit.txt
reports/: reports.md
reports/fase1/: informe-datos.md  presentacion-avances.typ
reports/fase2/: informe-detallado-f2.typ  presentacion-avances-f2.typ
src/analysis/: analysis.md
src/seminario_ia/: __init__.py
(+132 files in other folders)
