[project]
name = "SeminarioIA-LCC-UNISON-2026"
version = "0.1.0"
authors = [
    {name = "Jesus Flores Lacarra", email = "jss.263.fsc@gmail.com"}
]
description = "Repositorio para el proyecto de seminario de IA de la Lic. en Ciencias de la Computación en UNISON, 2026."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["data-analysis", "agriculture"]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "PyYAML>=6.0",
    "tqdm>=4.60.0",
    "pydantic>=2.12.4",
    "openpyxl>=3.1.5",
    "polars>=1.38.1",
    "geopandas>=1.1.2",
    "playwright>=1.58.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=2.15.0",
    "ty>=0.0.6",
]

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=7.6.0",
]

[project.urls]
Homepage = "https://github.com/JesusF10/SeminarioIA-LCC-UNISON-2026"
Repository = "https://github.com/JesusF10/SeminarioIA-LCC-UNISON-2026"

# Configuración de Ruff
[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E", # errors
    "W", # warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N", # pep8-naming
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.rules]
index-out-of-bounds = "warn"
possibly-missing-attribute = "error"
possibly-missing-import = "error"
redundant-cast = "ignore"
unused-ignore-comment = "warn"
